# nashios

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md
Applications/: CMakeLists.txt
Documentation/: BuildInstructions.md
Kernel/: CMakeLists.txt  Init.cpp  Init.hpp  bitmap.c  init.c  init.h  panic.c  panic.h
Kernel/Arch/i686/: Main.cpp
Kernel/Arch/i686/Boot/: Serial.cpp  Serial.hpp  boot.S  multiboot.c
Kernel/Arch/i686/cpu/: gdt.S  gdt.c  gdt.h  io.c
Kernel/Arch/i686/interrupts/: idt.c  idt.h  isr_common.S  pic.c
Kernel/Arch/i686/memory/: page_enable.S  physical.c  physical.h  virtual.c  virtual.h
Kernel/Arch/i686/task/: scheduler_return_usermode.S  tss.c
Kernel/api/posix/: fcntl.h  mount.h  poll.h  time.h
Kernel/api/posix/sys/: stat.h  syscall.h
Kernel/arch/i686/: Main.cpp  linker.ld  main.c
Kernel/arch/i686/boot/: boot.S  multiboot.c  serial.c
Kernel/arch/i686/cpu/: gdt.c  io.c  processor.c
Kernel/arch/i686/interrupts/: idt.c  isr.c  pic.c
Kernel/arch/i686/memory/: physical.c  virtual.c  virtual.h
Kernel/arch/i686/task/: scheduler_switch.S  tss.c  tss.h
Kernel/drivers/: ata.c  ata.h  fb.c  pci.c  pit.c
Kernel/filesystem/: chardev.c  chardev.h  devfs.c  ext2.c  ext2.h  mqueuefs.c  mqueuefs.h  tmpfs.c  virtual.c  virtual.h
Kernel/interrupts/: handler.c
Kernel/ipc/: mqueue.c  mqueue.h
Kernel/lib/: assert.c  ctype.c  stdio.c  stdlib.c  string.c
Kernel/memory/: heap.c  mmap.c  mmap.h
Kernel/system/: syscall.c
Kernel/task/: elf.c  scheduler.c  scheduler.h
Libraries/: CMakeLists.txt
Libraries/C/: CMakeLists.txt  assert.cpp  assert.h  crt0.cpp  crti.S  ctype.cpp  ctype.h  errno.cpp  errno.h  fcntl.cpp  fcntl.h  features.h  iconv.cpp  iconv.h  langinfo.cpp  langinfo.h  limits.h  locale.cpp  locale.h  math.cpp  math.h  mqueue.cpp  mqueue.h  poll.cpp  pthread.cpp  pthread.h  sched.cpp  sched.h  setjmp.cpp  setjmp.h  signal.cpp  signal.h  stdio.cpp  stdio.h  stdlib.cpp  stdlib.h  string.cpp  string.h  syscall.h  time.cpp  (+7 more)
Libraries/C/asm/: ioctl.h  ioctls.h  tcb.h
Libraries/C/bits/: access.h  blkcnt_t.h  blksize_t.h  clockid_t.h  cpu_set.cpp  cpu_set.h  dev_t.h  fcntl.h  fd_set.h  fsblkcnt_t.h  fsfilcnt_t.h  gid_t.h  id_t.h  inline-definition.h  ino_t.h  iovec.h  limits.h  locale_t.h  machine.h  mbstate.h  mode_t.h  mqueue.h  nl_item.h  nlink_t.h  null.h  off_t.h  poll.h  pthread_t.h  signal.h  suseconds_t.h  syscall.cpp  syscall.h  syscall_aliases.h  threads.h  time.h  time_t.h  timer_t.h  timespec.h  timeval.h  types.h  (+5 more)
Libraries/C/bits/sys/: stat.h
Libraries/C/sys/: ioctl.cpp  ioctl.h  mman.cpp  mman.h  poll.cpp  poll.h  select.cpp  select.h  stat.cpp  stat.h  syscall.h  time.cpp  time.h  types.h  uio.cpp  uio.h
kernel/: CMakeLists.txt  assert.c  assert.h  bitmap.c  bitmap.h  boot.S  boot.s  ctype.c  ctype.h  dlist.c  dlist.h  gdt.S  gdt.c  gdt.h  init.c  io.c  io.h  linker.ld  main.c  math.h  multiboot.c  multiboot.h  panic.c  panic.h  pit.c  plist.c  plist.h  processor.h  serial.c  serial.h  stdio.c  stdio.h  stdlib.c  stdlib.h  string.c  string.h  syscall.c  tss.c  tss.h
kernel/api/: framebuffer.h  mouse.h
kernel/api/posix/: errno.h  fcntl.h  limits.h  mman.h  mqueue.h  poll.h  signal.h  stat.h  time.h  types.h  unistd.h
kernel/api/posix/sys/: limits.h  mman.h  stat.h  syscall.h  types.h  wait.h
kernel/arch/i686/: main.c
kernel/arch/i686/boot/: boot.S  multiboot.c  serial.c
kernel/arch/i686/cpu/: gdt.c  io.c
kernel/arch/i686/interrupts/: idt.c  irq_common.S  isr.c  isr_common.S  pic.c  pic.h
kernel/arch/i686/memory/: physical.c  virtual.c  virtual.h
kernel/arch/i686/task/: scheduler_enter_usermode.S  tss.c
kernel/arch/lib/: stdio.h
kernel/arch/x86/: linker.ld  main.c
kernel/arch/x86/boot/: boot.S  linker.ld  main.c  multiboot.c  multiboot.h  serial.c  serial.h  start.S
kernel/arch/x86/cpu/: gdt.c  io.c  io.h  processor.c
kernel/arch/x86/interrupts/: idt.c  pic.c
kernel/arch/x86/lib/: stdio.c
kernel/arch/x86/memory/: physical.c  virtual.c  virtual.h
kernel/arch/x86/task/: tss.c  tss_flush.S
kernel/boot/: multiboot.c  multiboot.h
kernel/cpu/: processor.h
kernel/drivers/: ata.c  ata.h  fb.c  fb.h  keyboard.c  mouse.c  mouse.h  pci.c  pci.h  pit.c  pit.h
kernel/drivers/char/: debug.c  debug.h
kernel/filesystem/: chardev.c  chardev.h  devfs.c  devfs.h  ext2.c  ext2.h  mqueuefs.c  tmpfs.c  virtual.c  virtual.h
kernel/init/: main.c
kernel/interrupts/: handler.c  handler.h  idt.c  idt.h  idt_flush.S  irq.S  irq.c  irq.h  irq_common.S  isr.S  isr.c  isr.h  isr_common.S  pic.c  pic.h
kernel/ipc/: mqueue.c  mqueue.h
kernel/lib/: assert.c  assert.h  ctype.c  stdio.c  stdio.h  stdlib.c  stdlib.h  string.c  string.h
kernel/memory/: flush_tbl.S  heap.c  heap.h  mmap.c  mmap.h  page_enable.S  physical.c  physical.h  virtual.c  virtual.h
kernel/syscall/: brk.c  close.c  execve.c  exit.c  fcntl.c  fork.c  fstat.c  ftruncate.c  getpid.c  ioctl.c  mmap.c  mq_open.c  mq_timedreceive.c  mq_timedsend.c  open.c  poll.c  read.c  stat.c  write.c
kernel/system/: sys.c  sys.h  syscall.c  syscall.h
kernel/task/: elf.c  elf.h  sched_enter_user.S  sched_reenter_user.S  sched_switch.S  scheduler.c  scheduler.h  scheduler_enter_usermode.S  scheduler_return_usermode.S  scheduler_switch.S  tss.c  tss.h  tss_flush.S  wait.h
libraries/c/: CMakeLists.txt  assert.c  assert.h  crt0.c  crti.S  crtn.S  ctype.c  ctype.h  errno.h  fcntl.c  fcntl.h  iconv.h  limits.h  mqueue.c  mqueue.h  poll.c  poll.h  stdbool.h  stddef.h  stdint.h  stdio.c  stdio.h  stdlib.c  stdlib.h  string.c  string.h  stropts.h  termios.c  termios.h  time.c  time.h  unistd.c  unistd.h
libraries/c/arch/i686/sys/: syscall.h
libraries/c/arch/x86/bits/: worldsize.h
libraries/c/arch/x86_64/: crti.S  crtn.S
libraries/c/bits/: errno.h  fcntl.h  limits.h  mqueue.h  poll.h  time.h  types.h  typesizes.h  worldsize.h
libraries/c/bits/sys/: mman.h  stat.h  syscall.h  types.h
libraries/c/sys/: cdefs.h  ioctl.c  ioctl.h  mman.c  mman.h  stat.c  stat.h  syscall.h  types.h  wait.c  wait.h
st/: assert.h  (+6 more)
(+87 files in other folders)
