cmake_minimum_required(VERSION 3.26)
project(nashios ASM C CXX)

set(CMAKE_C_STANDARD 23)
set(CMAKE_C_STANDARD_REQUIRED ON)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(CMAKE_INSTALL_MESSAGE NEVER)

function(nashios_install_headers target_name)
    file(GLOB_RECURSE headers RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.h")
    foreach(header ${headers})
        get_filename_component(subdirectory ${header} DIRECTORY)
        install(FILES ${header} DESTINATION "usr/include/${target_name}/${subdirectory}")
    endforeach()
endfunction()

function(nashios_install_sources)
    cmake_path(RELATIVE_PATH CMAKE_CURRENT_SOURCE_DIR BASE_DIRECTORY CMAKE_SOURCE_DIR OUTPUT_VARIABLE relative_dir)
    file(GLOB_RECURSE sources RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} "*.h" "*.c")
    foreach(source ${sources})
        get_filename_component(subdirectory ${source} DIRECTORY)
        install(FILES ${source} DESTINATION usr/src/nashios/${relative_dir}/${subdirectory})
    endforeach()
endfunction()

function(nashios_libc target_name fs_name)
    nashios_install_headers("")
    nashios_install_sources()
    add_library(${target_name} ${SOURCES})
    target_link_directories(${target_name} PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
    set_target_properties(${target_name} PROPERTIES OUTPUT_NAME ${fs_name})
    install(TARGETS ${target_name} DESTINATION usr/lib)
endfunction()

function(nashios_lib target_name fs_name)
    nashios_install_headers(${fs_name})
    nashios_install_sources()
    add_library(${target_name} ${SOURCES})
    target_link_libraries(${target_name} PRIVATE libc)
    set_target_properties(${target_name} PROPERTIES OUTPUT_NAME ${fs_name})
    install(TARGETS ${target_name} DESTINATION usr/lib)
endfunction()

function(nashios_bin target_name)
    nashios_install_sources()
    add_executable(${target_name} ${SOURCES})
    install(TARGETS ${target_name} DESTINATION bin)
    target_link_libraries(${target_name} libc)
endfunction()

include_directories(.)
include_directories(libraries)
include_directories(libraries/c)

add_compile_options(-Wall -Wextra)

add_subdirectory(kernel)
add_subdirectory(libraries)
add_subdirectory(services)
add_subdirectory(applications)
